--- a/nodes/klicktipp-subscriber-signin.html
+++ b/nodes/klicktipp-subscriber-signin.html
@@ -71,7 +71,7 @@
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp subscriber signin', {
 		category: 'KlickTipp',
-		color: '#F2F2F2',
+		color: '#1B2C3D',
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
 			apiKey: {
@@ -119,36 +119,23 @@
 		label: function () {
 			return this.name || 'Subscriber Signin';
 		},
+		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
-			const contactListContainer = $('#contact-fields-section');
+			this.contactListContainer = $('#contact-fields-section');
 			const fieldsInput = $("#node-input-fields");
-
-			const customContactFieldsType = {
-				value: "fieldsFromApi",
-				label: "Contact fields list",
-				icon: "fa fa-cog",
-				hasValue: false
-			}
 
 			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
 			ktInitializeTypedInput("#node-input-smsNumber", "#node-input-smsNumberType", 'str', ['str']);
 			ktInitializeTypedInput("#node-input-apiKey", "#node-input-apiKeyType", 'str', ['str']);
 			ktInitializeTypedInput("#node-input-apiKey", "#node-input-apiKeyType", 'str', ['str']);
-			ktInitializeTypedInput("#node-input-fields", "#node-input-fieldsType", 'msg', ['json', customContactFieldsType]);
+			ktInitializeTypedInput("#node-input-fields", "#node-input-fieldsType", 'msg', ['json', KT_CUSTOM_CONTACT_FIELDS_TYPE]);
 
-			$(fieldsInput).on("change", (event, type) => {
-				if (type === "fieldsFromApi") {
-					// Show the contact fields section and populate the fields from the API
-					contactListContainer.show();
-					ktPopulateContactFields(contactListContainer, this.fieldsData, '/klicktipp/contact-fields/subscriber-signin-node');
-				} else {
-					// Hide the contact fields section for other types
-					contactListContainer.hide();
-				}
-			});
+			ktHandleContactFieldsDisplay(this.contactListContainer, fieldsInput, 'subscriber-signin-node');
 		},
 		oneditsave: function() {
-			ktStoreContactFields();
+			this.fields = {};
+			// Collect all field values and store them in this.fields
+			ktSaveContactFieldValues(this.contactListContainer, this.fields);
 		}
 	});
 </script>
