--- a/nodes/klicktipp-config.html
+++ b/nodes/klicktipp-config.html
@@ -1,5 +1,11 @@
 <script src="resources/@klicktipp/node-red-contrib-klicktipp/formUtils.js"></script>
 
+<style>
+	.klicktipp_label_style {
+		fill: white;
+	}
+</style>
+
 <script type="text/x-red" data-template-name="klicktipp-config">
 	<div class="form-row">
 	    <label for="node-config-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
