--- a/nodes/klicktipp-resend-autoresponder.html
+++ b/nodes/klicktipp-resend-autoresponder.html
@@ -64,7 +64,7 @@
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp resend autoresponder', {
 		category: 'KlickTipp',
-		color: '#F2F2F2',
+		color: '#1B2C3D',
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
 			name: { value: '' },
@@ -90,6 +90,7 @@
 		label: function () {
 			return this.name || 'Resend Autoresponder';
 		},
+		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
 			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
 			ktInitializeTypedInput("#node-input-autoresponderId", "#node-input-autoresponderTypeId", 'num', ['num']);
