--- a/nodes/klicktipp-subscriber-unsubscribe.html
+++ b/nodes/klicktipp-subscriber-unsubscribe.html
@@ -58,7 +58,7 @@
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp subscriber unsubscribe', {
 		category: 'KlickTipp',
-		color: '#F2F2F2',
+		color: '#1B2C3D',
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
 			email: {
@@ -77,6 +77,7 @@
 		label: function () {
 			return this.name || 'Subscriber Unsubscribe';
 		},
+		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
 			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
 		},
