--- a/nodes/klicktipp-subscription-process-get.html
+++ b/nodes/klicktipp-subscription-process-get.html
@@ -59,7 +59,7 @@
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp subscription process get', {
 		category: 'KlickTipp',
-		color: '#F2F2F2',
+		color: '#1B2C3D',
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
 			listId: {
@@ -74,6 +74,7 @@
 		label: function () {
 			return this.name || 'Subscription Process Get';
 		},
+		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
 			const listIdDropdown = $('#node-input-listId');
 			ktPopulateDropdown(listIdDropdown, this.listId, '/klicktipp/subscription-process/get-process-node');
