--- a/nodes/klicktipp-subscriber-delete.html
+++ b/nodes/klicktipp-subscriber-delete.html
@@ -76,7 +76,7 @@
 		outputs: 1,
 		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Subscriber Delete';
+			return this.name || 'Subscriber delete';
 		},
 		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
