--- a/nodes/klicktipp-subscriber-signout.html
+++ b/nodes/klicktipp-subscriber-signout.html
@@ -82,9 +82,9 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.png',
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Subscriber Signout';
+			return this.name || 'Subscriber signout';
 		},
 		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
