--- a/nodes/klicktipp-subscriber-untag.html
+++ b/nodes/klicktipp-subscriber-untag.html
@@ -85,9 +85,9 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.png',
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Subscriber Untag';
+			return this.name || 'Subscriber untag';
 		},
 		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
