--- a/nodes/klicktipp-subscription-process-get-redirect.html
+++ b/nodes/klicktipp-subscription-process-get-redirect.html
@@ -85,9 +85,9 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.png',
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Subscription Process Redirect';
+			return this.name || 'Opt-in process redirect URL';
 		},
 		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
