--- a/nodes/klicktipp-field-index.html
+++ b/nodes/klicktipp-field-index.html
@@ -47,9 +47,9 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.png',
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Field Index';
+			return this.name || 'Field index';
 		},
 		labelStyle: "klicktipp_label_style",
 	});
