--- a/nodes/klicktipp-subscriber-get.html
+++ b/nodes/klicktipp-subscriber-get.html
@@ -73,9 +73,9 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.png',
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Subscriber Get';
+			return this.name || 'Subscriber get';
 		},
 		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
