--- a/nodes/klicktipp-subscriber-signin.html
+++ b/nodes/klicktipp-subscriber-signin.html
@@ -115,9 +115,9 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.png',
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Subscriber Signin';
+			return this.name || 'Subscriber signin';
 		},
 		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
