--- a/nodes/klicktipp-subscriber-subscribe.html
+++ b/nodes/klicktipp-subscriber-subscribe.html
@@ -128,9 +128,9 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.png',
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Subscriber Subscribe';
+			return this.name || 'Subscriber subscribe';
 		},
 		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
