--- a/nodes/klicktipp-subscriber-tag.html
+++ b/nodes/klicktipp-subscriber-tag.html
@@ -1,8 +1,4 @@
-<!-- Select2 JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
-
 <script type="text/x-red" data-template-name="klicktipp subscriber tag">
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
 	<div class="form-row">
 	    <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
@@ -14,7 +10,7 @@
 	</div>
     <div class="form-row">
         <label for="node-input-tagId"><i class="fa fa-tag"></i> <span>Tags</span></label>
-        <select id="node-input-tagId" class="js-example-basic-multiple" multiple="multiple"></select>
+        <select id="node-input-tagId" multiple style="height: auto; width: 100%;"></select>
     </div>
 	<div class="form-row">
 	    <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
@@ -88,26 +84,18 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.png',
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Subscriber Tag';
+			return this.name || 'Subscriber tag';
 		},
 		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
 			const tagDropdown = $('#node-input-tagId');
 			ktPopulateDropdown(tagDropdown, this.tagId, '/klicktipp/tags/subscriber-tag-node');
 			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
-
-			// Initialize Select2 for the tag dropdown with multiple selection enabled
-			tagDropdown.select2({
-				placeholder: "Type to add a tag",
-				allowClear: true,
-				width: '100%',
-			});
 		},
 		oneditsave: function() {
 			this.tagId = $('#node-input-tagId').val(); // Save the selected tagId(s)
-			console.log(this);
 		}
 	});
 </script>
