--- a/nodes/klicktipp-subscriber-tagged.html
+++ b/nodes/klicktipp-subscriber-tagged.html
@@ -70,9 +70,9 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.png',
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Subscriber Tagged';
+			return this.name || 'Subscriber tagged';
 		},
 		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
