--- a/nodes/klicktipp-subscriber-unsubscribe.html
+++ b/nodes/klicktipp-subscriber-unsubscribe.html
@@ -14,7 +14,7 @@
 	</div>
 </script>
 
-<script type="text/x-red" data-help-name="klicktipp unsubscribe">
+<script type="text/x-red" data-help-name="klicktipp subscriber unsubscribe">
 	<p>Unsubscribes a subscriber.</p>
 
 	<h3>Inputs</h3>
@@ -73,9 +73,9 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.png',
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Subscriber Unsubscribe';
+			return this.name || 'Subscriber unsubscribe';
 		},
 		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
