--- a/nodes/klicktipp-subscriber-update.html
+++ b/nodes/klicktipp-subscriber-update.html
@@ -121,9 +121,9 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.png',
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Subscriber Update';
+			return this.name || 'Subscriber update';
 		},
 		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
