--- a/nodes/klicktipp-subscription-process-get.html
+++ b/nodes/klicktipp-subscription-process-get.html
@@ -70,9 +70,9 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.png',
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Subscription Process Get';
+			return this.name || 'Opt-in process get';
 		},
 		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
