--- a/nodes/klicktipp-tag-create.html
+++ b/nodes/klicktipp-tag-create.html
@@ -88,9 +88,9 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.png',
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Tag Create';
+			return this.name || 'Tag create';
 		},
 		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
