--- a/nodes/klicktipp-tag-get.html
+++ b/nodes/klicktipp-tag-get.html
@@ -70,9 +70,9 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.png',
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Tag Get';
+			return this.name || 'Tag get';
 		},
 		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
