--- a/nodes/klicktipp-tag-update.html
+++ b/nodes/klicktipp-tag-update.html
@@ -97,9 +97,9 @@
 		},
 		inputs: 1,
 		outputs: 1,
-		icon: 'klicktipp.png',
+		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || 'Tag Update';
+			return this.name || 'Tag update';
 		},
 		labelStyle: "klicktipp_label_style",
 		oneditprepare: function() {
