Fixed node text color on the left side menu

--- a/nodes/klicktipp-config.html
+++ b/nodes/klicktipp-config.html
@@ -2,7 +2,16 @@
 
 <style>
 	.klicktipp_label_style {
-		fill: white;
+		fill: #fff;
+	}
+
+	/* Common rule for KlickTipp nodes in the Node-RED palette */
+	.red-ui-palette-node[data-palette-type^="klicktipp"] .red-ui-palette-label {
+		color: #fff;
+	}
+
+	.red-ui-palette-node[data-palette-type^="klicktipp"] .red-ui-palette-icon-container {
+		border-right-color: #fff;
 	}
 </style>
 
