--- a/nodes/klicktipp-subscriber-get.html
+++ b/nodes/klicktipp-subscriber-get.html
@@ -78,6 +78,7 @@
 			return this.name || 'Subscriber get';
 		},
 		labelStyle: "klicktipp_label_style",
+		paletteLabel: 'Debug',
 		oneditprepare: function() {
 			ktInitializeTypedInput("#node-input-subscriberId", "#node-input-subscriberIdType", 'num', ['num']);
 		},
