--- a/nodes/klicktipp-subscriber-search.html
+++ b/nodes/klicktipp-subscriber-search.html
@@ -1,4 +1,4 @@
-<script type="text/x-red" data-template-name="klicktipp subscriber search">
+<script type="text/x-red" data-template-name="klicktipp-subscriber-search">
 	<div class="form-row">
 	    <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
@@ -14,7 +14,7 @@
 	</div>
 </script>
 
-<script type="text/x-red" data-help-name="klicktipp subscriber search">
+<script type="text/x-red" data-help-name="klicktipp-subscriber-search">
 	<p>Returns the subscriber ID for an email address. Use the subscriber_get node to retrieve detailed information about this subscriber.</p>
 
 	<h3>Inputs</h3>
@@ -56,7 +56,7 @@
 </script>
 
 <script type="text/javascript">
-	RED.nodes.registerType('klicktipp subscriber search', {
+	RED.nodes.registerType('klicktipp-subscriber-search', {
 		category: 'KlickTipp',
 		color: '#1B2C3D',
 		defaults: {
@@ -78,6 +78,7 @@
 			return this.name || 'Subscriber search';
 		},
 		labelStyle: "klicktipp_label_style",
+		paletteLabel: 'Subscriber search',
 		oneditprepare: function() {
 			ktInitializeTypedInput("#node-input-email", "#node-input-emailType", 'str', ['str']);
 		},
