--- a/nodes/klicktipp-subscriber-untag.html
+++ b/nodes/klicktipp-subscriber-untag.html
@@ -1,4 +1,4 @@
-<script type="text/x-red" data-template-name="klicktipp subscriber untag">
+<script type="text/x-red" data-template-name="klicktipp-subscriber-untag">
 	<div class="form-row">
 	    <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
@@ -20,7 +20,7 @@
 	</div>
 </script>
 
-<script type="text/x-red" data-help-name="klicktipp subscriber untag">
+<script type="text/x-red" data-help-name="klicktipp-subscriber-untag">
 	<p>Removes a manual tag or SmartLink from a subscriber.</p>
 
 	<h3>Inputs</h3>
@@ -63,7 +63,7 @@
 </script>
 
 <script type="text/javascript">
-	RED.nodes.registerType('klicktipp subscriber untag', {
+	RED.nodes.registerType('klicktipp-subscriber-untag', {
 		category: 'KlickTipp',
 		color: '#1B2C3D',
 		defaults: {
@@ -90,6 +90,7 @@
 			return this.name || 'Subscriber untag';
 		},
 		labelStyle: "klicktipp_label_style",
+		paletteLabel: 'Subscriber untag',
 		oneditprepare: function() {
 			const tagDropdown = $('#node-input-tagId');
 			ktPopulateDropdown(tagDropdown, this.tagId, '/klicktipp/tags/subscriber-untag-node');
