--- a/nodes/klicktipp-subscriber-update.html
+++ b/nodes/klicktipp-subscriber-update.html
@@ -1,4 +1,4 @@
-<script type="text/x-red" data-template-name="klicktipp subscriber update">
+<script type="text/x-red" data-template-name="klicktipp-subscriber-update">
 	<div class="form-row">
 	    <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
@@ -30,7 +30,7 @@
 	</div>
 </script>
 
-<script type="text/x-red" data-help-name="klicktipp subscriber update">
+<script type="text/x-red" data-help-name="klicktipp-subscriber-update">
 	<p>Updates the data fields, email address, or SMS number of a subscriber.</p>
 
 	<h3>Inputs</h3>
@@ -75,7 +75,7 @@
 </script>
 
 <script type="text/javascript">
-	RED.nodes.registerType('klicktipp subscriber update', {
+	RED.nodes.registerType('klicktipp-subscriber-update', {
 		category: 'KlickTipp',
 		color: '#1B2C3D',
 		defaults: {
@@ -126,6 +126,7 @@
 			return this.name || 'Subscriber update';
 		},
 		labelStyle: "klicktipp_label_style",
+		paletteLabel: 'Subscriber update',
 		oneditprepare: function() {
 			this.contactListContainer = $('#contact-fields-section');
 			const fieldsInput = $("#node-input-fields");
