--- a/nodes/klicktipp-subscription-process-get-redirect.html
+++ b/nodes/klicktipp-subscription-process-get-redirect.html
@@ -1,4 +1,4 @@
-<script type="text/x-red" data-template-name="klicktipp subscription process redirect">
+<script type="text/x-red" data-template-name="klicktipp-subscription-process-get-redirect">
 	<div class="form-row">
 	   <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
 	   <input type="text" id="node-input-klicktipp" data-i18n="config node">
@@ -20,7 +20,7 @@
 	</div>
 </script>
 
-<script type="text/x-red" data-help-name="klicktipp subscription process redirect">
+<script type="text/x-red" data-help-name="klicktipp-subscription-process-get-redirect">
 	<p>Returns the URL of the opt-in confirmation page for a subscriber's opt-in process.</p>
 
 	<h3>Inputs</h3>
@@ -63,7 +63,7 @@
 </script>
 
 <script type="text/javascript">
-	RED.nodes.registerType('klicktipp subscription process redirect', {
+	RED.nodes.registerType('klicktipp-subscription-process-get-redirect', {
 		category: 'KlickTipp',
 		color: '#1B2C3D',
 		defaults: {
@@ -90,6 +90,7 @@
 			return this.name || 'Opt-in process redirect URL';
 		},
 		labelStyle: "klicktipp_label_style",
+		paletteLabel: 'Opt-in process redirect URL',
 		oneditprepare: function() {
 			const listIdDropdown = $('#node-input-listId');
 			ktPopulateDropdown(listIdDropdown, this.listId, '/klicktipp/subscription-process/get-redirect-node');
