--- a/nodes/klicktipp-tag-create.html
+++ b/nodes/klicktipp-tag-create.html
@@ -1,4 +1,4 @@
-<script type="text/x-red" data-template-name="klicktipp tag create">
+<script type="text/x-red" data-template-name="klicktipp-tag-create">
 	<div class="form-row">
 	    <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
@@ -19,7 +19,7 @@
 	</div>
 </script>
 
-<script type="text/x-red" data-help-name="klicktipp tag create">
+<script type="text/x-red" data-help-name="klicktipp-tag-create">
 	<p>Creates a new manual tag.</p>
 
 	<h3>Inputs</h3>
@@ -62,7 +62,7 @@
 </script>
 
 <script type="text/javascript">
-	RED.nodes.registerType('klicktipp tag create', {
+	RED.nodes.registerType('klicktipp-tag-create', {
 		category: 'KlickTipp',
 		color: '#1B2C3D',
 		defaults: {
@@ -93,6 +93,7 @@
 			return this.name || 'Tag create';
 		},
 		labelStyle: "klicktipp_label_style",
+		paletteLabel: 'Tag create',
 		oneditprepare: function() {
 			ktInitializeTypedInput("#node-input-tagName", "#node-input-tagNameType", 'str', ['str']);
 			ktInitializeTypedInput("#node-input-tagDescription", "#node-input-tagDescriptionType", 'str', ['str']);
