--- a/nodes/klicktipp-subscriber-get.html
+++ b/nodes/klicktipp-subscriber-get.html
@@ -1,4 +1,4 @@
-<script type="text/x-red" data-template-name="klicktipp subscriber get">
+<script type="text/x-red" data-template-name="klicktipp-subscriber-get">
 	<div class="form-row">
 	    <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
@@ -14,7 +14,7 @@
 	</div>
 </script>
 
-<script type="text/x-red" data-help-name="klicktipp subscriber get">
+<script type="text/x-red" data-help-name="klicktipp-subscriber-get">
 	<p>Returns all available information about a subscriber. For example, you can use it to check when a contact received, opened, or clicked in a specific email.</p>
 
 	<h3>Inputs</h3>
@@ -56,7 +56,7 @@
 </script>
 
 <script type="text/javascript">
-	RED.nodes.registerType('klicktipp subscriber get', {
+	RED.nodes.registerType('klicktipp-subscriber-get', {
 		category: 'KlickTipp',
 		color: '#1B2C3D',
 		defaults: {
@@ -78,7 +78,7 @@
 			return this.name || 'Subscriber get';
 		},
 		labelStyle: "klicktipp_label_style",
-		paletteLabel: 'Debug',
+		paletteLabel: 'Subscriber get',
 		oneditprepare: function() {
 			ktInitializeTypedInput("#node-input-subscriberId", "#node-input-subscriberIdType", 'num', ['num']);
 		},
