--- a/nodes/klicktipp-subscriber-tagged.html
+++ b/nodes/klicktipp-subscriber-tagged.html
@@ -1,4 +1,4 @@
-<script type="text/x-red" data-template-name="klicktipp subscriber tagged">
+<script type="text/x-red" data-template-name="klicktipp-subscriber-tagged">
 	<div class="form-row">
 	    <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
@@ -15,7 +15,7 @@
 	</div>
 </script>
 
-<script type="text/x-red" data-help-name="klicktipp subscriber tagged">
+<script type="text/x-red" data-help-name="klicktipp-subscriber-tagged">
 	<p>Returns an associative array [subscriber_id] => [subscription_timestamp] of subscribers who have been tagged with a specific tag. Use the subscriber_get node to retrieve detailed information about a subscriber.</p>
 
 	<h3>Inputs</h3>
@@ -57,7 +57,7 @@
 </script>
 
 <script type="text/javascript">
-	RED.nodes.registerType('klicktipp subscriber tagged', {
+	RED.nodes.registerType('klicktipp-subscriber-tagged', {
 		category: 'KlickTipp',
 		color: '#1B2C3D',
 		defaults: {
@@ -75,6 +75,7 @@
 			return this.name || 'Subscriber tagged';
 		},
 		labelStyle: "klicktipp_label_style",
+		paletteLabel: 'Subscriber tagged',
 		oneditprepare: function() {
 			const tagDropdown = $('#node-input-tagId');
 			ktPopulateDropdown(tagDropdown, this.tagId, '/klicktipp/tags/subscriber-tagged-node');
