--- a/nodes/klicktipp-subscription-process-get.html
+++ b/nodes/klicktipp-subscription-process-get.html
@@ -1,4 +1,4 @@
-<script type="text/x-red" data-template-name="klicktipp subscription process get">
+<script type="text/x-red" data-template-name="klicktipp-subscription-process-get">
 	<div class="form-row">
 	   <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
 	   <input type="text" id="node-input-klicktipp" data-i18n="config node">
@@ -15,7 +15,7 @@
 	</div>
 </script>
 
-<script type="text/x-red" data-help-name="klicktipp subscription process get">
+<script type="text/x-red" data-help-name="klicktipp-subscription-process-get">
 	<p>Returns the name of an opt-in process.</p>
 
 	<h3>Inputs</h3>
@@ -57,7 +57,7 @@
 </script>
 
 <script type="text/javascript">
-	RED.nodes.registerType('klicktipp subscription process get', {
+	RED.nodes.registerType('klicktipp-subscription-process-get', {
 		category: 'KlickTipp',
 		color: '#1B2C3D',
 		defaults: {
@@ -75,6 +75,7 @@
 			return this.name || 'Opt-in process get';
 		},
 		labelStyle: "klicktipp_label_style",
+		paletteLabel: 'Opt-in process get',
 		oneditprepare: function() {
 			const listIdDropdown = $('#node-input-listId');
 			ktPopulateDropdown(listIdDropdown, this.listId, '/klicktipp/subscription-process/get-process-node');
