--- a/nodes/klicktipp-tag-update.html
+++ b/nodes/klicktipp-tag-update.html
@@ -1,4 +1,4 @@
-<script type="text/x-red" data-template-name="klicktipp tag update">
+<script type="text/x-red" data-template-name="klicktipp-tag-update">
 	<div class="form-row">
 	    <label for="node-input-klicktipp"><i class="fa fa-user"></i> <span>KlickTipp Config</span></label>
 	    <input type="text" id="node-input-klicktipp" data-i18n="config node">
@@ -25,7 +25,7 @@
 	</div>
 </script>
 
-<script type="text/x-red" data-help-name="klicktipp tag update">
+<script type="text/x-red" data-help-name="klicktipp-tag-update">
 	<p>Updates a manual tag or SmartLink.</p>
 
 	<h3>Inputs</h3>
@@ -69,7 +69,7 @@
 </script>
 
 <script type="text/javascript">
-	RED.nodes.registerType('klicktipp tag update', {
+	RED.nodes.registerType('klicktipp-tag-update', {
 		category: 'KlickTipp',
 		color: '#1B2C3D',
 		defaults: {
@@ -102,6 +102,7 @@
 			return this.name || 'Tag update';
 		},
 		labelStyle: "klicktipp_label_style",
+		paletteLabel: 'Tag update',
 		oneditprepare: function() {
 			const tagDropdown = $('#node-input-tagId');
 			ktPopulateDropdown(tagDropdown, this.tagId, '/klicktipp/tags/update-tag-node');
